--- a/res/Items_menu/Item_menu.plist
+++ b/res/Items_menu/Item_menu.plist
@@ -34,7 +34,7 @@
                 <key>textureRotated</key>
                 <false/>
             </dict>
-            <key>btn_play.png</key>
+            <key>btn_playMenu.png</key>
             <dict>
                 <key>aliases</key>
                 <array/>
